fixed resume spacing.

--- a/Personal-Website/style.css
+++ b/Personal-Website/style.css
@@ -183,7 +183,6 @@ a:active {
 .experience-grid-date {
     display: grid;
     grid-template-rows: auto 1fr;
-    margin-bottom: 25px;
 }
 
 .experience-date {
